Optimize Dockerfile for better caching and runtime performance

--- a/NerdWire/Dockerfile
+++ b/NerdWire/Dockerfile
@@ -2,16 +2,16 @@
 FROM maven:3.8.4-openjdk-17-slim AS build
 WORKDIR /app
 
-# Copy Maven wrapper files first
-COPY mvnw .
-COPY mvnw.cmd .
-COPY .mvn .mvn
-
-# Set execute permission for mvnw
-RUN chmod +x mvnw
-
-# Copy project files
+# Copy Maven wrapper and POM files first (for better layer caching)
+COPY mvnw mvnw.cmd ./
+COPY .mvn/ .mvn/
 COPY pom.xml .
+
+# Set execute permission for mvnw and download dependencies
+RUN chmod +x mvnw && \
+    ./mvnw dependency:go-offline
+
+# Copy source files
 COPY src/ src/
 
 # Build the application
@@ -20,14 +20,22 @@ RUN ./mvnw clean package -DskipTests
 # Run stage
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
+
+# Add timezone configuration
+RUN apk add --no-cache tzdata
+ENV TZ=Europe/Istanbul
+
+# Create volume for temporary files
 VOLUME /tmp
 
-# Copy only the built jar
+# Copy the built jar from build stage
 COPY --from=build /app/target/*.jar app.jar
 
-# Set Spring profile to use external configuration
+# Set Spring and JVM configurations
 ENV SPRING_PROFILES_ACTIVE=prod
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/./urandom"
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Use shell form to expand environment variables
+ENTRYPOINT java $JAVA_OPTS -jar app.jar
